--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status-codes": "^2.3.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "zod": "^3.23.8"
