--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
+    "shurjopay": "^0.12.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
